--- a/Exercise_loops_Aarti.ipynb
+++ b/Exercise_loops_Aarti.ipynb
@@ -262,19 +262,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input a dog's age in human years: 20\n",
-      "The dog's age in dog's years is 93\n"
+      "input the dogs age human years\n",
+      "20\n",
+      "dogs age in human years:  20\n",
+      "dogs age in dog's years:  93.0\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "print(\"input the dogs age human years\")\n",
+    "hy = int(input())\n",
+    "dy = 0\n",
+    "if hy == 0:\n",
+    "    print(\"invalid age. enter age > 0\")\n",
+    "if hy ==1:\n",
+    "    dy = 10.5\n",
+    "elif hy == 2:\n",
+    "    dy = 21.0\n",
+    "else:\n",
+    "    dy=21.0\n",
+    "    for i in range(2,hy):\n",
+    "        dy = dy+4\n",
+    "print(\"dogs age in human years: \", hy)\n",
+    "print(\"dogs age in dog's years: \", dy)\n",
+    "\n",
+    "\n",
+    "        "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -549,6 +570,51 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gcd(a,b):\n",
+    "    num1 = a\n",
+    "    num2 = b\n",
+    "    while(b != 0):\n",
+    "        temp = b\n",
+    "        b = a % b\n",
+    "        a = temp\n",
+    "    gcd = a\n",
+    "    return gcd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter first number: 2\n",
+      "Enter second number: 3\n",
+      "GCD of 2 and 3 is: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input(\"Enter first number: \"))\n",
+    "b = int(input(\"Enter second number: \"))\n",
+    "print(\"GCD of {} and {} is: {}\".format(a,b,gcd(a,b)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -567,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,19 +658,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "input is a palindrome  aba\n"
+      "input is not a palindrome:  inceptez\n"
      ]
     }
    ],
    "source": [
-    "palindrome(\"aba\")"
+    "palindrome(\"inceptez\")"
    ]
   },
   {
@@ -616,11 +682,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "def palindromeRecr(inp, start, end):\n",
+    "    print(start)\n",
+    "    print(end)\n",
     "    if (start == end):\n",
     "        print(\"1111\")\n",
     "        return True\n",
@@ -630,12 +698,15 @@
     "    if (inp[start] == inp[end] and start < end - 1):\n",
     "        print(\"3333\")\n",
     "        palindromeRecr(inp, start+1, end-1)\n",
+    "    else:\n",
+    "        print(\"555\")\n",
+    "        return True\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -643,13 +714,13 @@
      "output_type": "stream",
      "text": [
       "Enter input string!\n",
-      "nitin\n",
-      "['n', 'i', 't', 'i', 'n']\n",
-      "3333\n",
-      "3333\n",
-      "1111\n",
-      "None\n",
-      "input is not palindrome:  nitin\n"
+      "inceptez\n",
+      "['i', 'n', 'c', 'e', 'p', 't', 'e', 'z']\n",
+      "0\n",
+      "7\n",
+      "2222\n",
+      "False\n",
+      "input is not palindrome:  inceptez\n"
      ]
     }
    ],
@@ -663,11 +734,18 @@
     "print(strList)\n",
     "palinFlag = palindromeRecr(strList, 0, length-1)\n",
     "print(palinFlag)\n",
-    "if (palinFlag):\n",
+    "if palinFlag is True:\n",
     "    print(\"input is palindrome: \", str)\n",
     "else:\n",
     "    print(\"input is not palindrome: \", str)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
